--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev": "ts-node-dev --files src/index.ts",  
+    "build": "tsc && cp ./package.json ./dist",  
+    "start": "node dist/index.js"
+  },   
   "keywords": [],
   "author": "",
   "license": "ISC",
