--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "math-intrinsics": "^1.1.0",
     "mongodb": "^5.9.2",
     "mongoose": "^7.8.7",
